catch and update name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Grocery truck terminal check",
+  "name": "GroceryTruckTerminalCheck",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
